# CineVault_CS-744_DECS_Project_IITB

./: .gitignore  README.md
KVServer/: CMakeLists.txt  cache.cpp  cache.h  db.cpp  db.h  main.cpp
KVServer/database/: setup_db.sql
LoadGenerator/: CMakeLists.txt  README_LoadGenerator.md  generate_plots.ipynb  load_generator.cpp  plot_resource_utilization.py  plot_results.py  plot_results_universal.py
LoadGenerator/CL_outputs/: read_32thread.txt
LoadGenerator/CL_outputs/read/: read_16thread.txt  read_1thread.txt  read_2thread.txt  read_4thread.txt  read_8thread.txt
LoadGenerator/CL_outputs/write/: write_16thread.txt  write_1thread.txt  write_2thread.txt  write_32thread.txt  write_4thread.txt  write_8thread.txt
LoadGenerator/profiling/: monitor.sh
LoadGenerator/profiling/monitoring_logs/: summary_read_32thread.txt
LoadGenerator/profiling/monitoring_logs/read/: summary_read_16thread.txt  summary_read_1thread.txt  summary_read_2thread.txt  summary_read_4thread.txt  summary_read_8thread.txt
LoadGenerator/profiling/monitoring_logs/write/: summary_write_16thread.txt  summary_write_1thread.txt  summary_write_2thread.txt  summary_write_32thread.txt  (+2 more)
LoadGenerator/results/: read_32thread.csv
LoadGenerator/results/read/: read_16thread.csv  read_2thread.csv  read_4thread.csv  read_8thread.csv
LoadGenerator/results/write/: write_16thread.csv  write_1thread.csv  write_2thread.csv  write_32thread.csv  write_4thread.csv  write_8thread.csv
MovieServer/: CMakeLists.txt  cache.cpp  cache.h  db.cpp  db.h  main.cpp
MovieServer/database/: setup_db.sql
